@startuml
'https://plantuml.com/class-diagram

class MainPerso

interface Jeu{
+evoluer(Commande commandeUser)
+etreFini(): boolean
}

class Monstre{
+Monstre(int x , int y , int vie)
+getPos(): Postion
+deplacer(Labyrinthe labyrinthe)
+subirDegtat(int d)
+getVie():int
+estVivant():boolean
}

abstract Personnage{
#pos: Position
#vie: int
+Personnage(int x, int y, int vie)
+getPos(): Position
+getVie(): int
+subirDegtat(int d)
+estVivant(): boolean
}

class Hero{
+Hero(int x , int y , int vie)
+getPos(): Postion
+deplacer(int x , int y)
+subirDegtat(int d)
+attaquer(Monstre monstre,int dy ,int dx)
}

class Labyrinthe{
-grille: char[][]
-hero:Hero
+Labyrinth(String fichier)
+estLibre(int x, int y): boolean
+getGrille(): char[][]
+getHero(): Hero
+getMonstre():Monstre
}

class LabyrintheDessin{
-jeu: PersoJeu
+LabyrintheDessin(JeuPerso j)
+dessiner(BufferedImage image)
}

interface DessinJeu{
+dessiner(BufferedImage im)
}

class JeuPerso{
-labyrinthe: Labyrinthe
-hero: Hero
+JeuPerso(Labyrinthe labyrinthe)
+evoluer(Commande c)
+etreFini(): boolean
+getLabyrinthe(): labyrinthe
+getHero():  Hero
+getAnimY():int
+getAnimX():int
+getAnimTime():int
}

class Position{
-x: int
-y: int
+getX(): int
+getY(): int
}

Hero --|> Personnage
Monstre--|> Personnage
Personnage --> MainPerso
Labyrinthe --> MainPerso

Position<--Personnage
JeuPerso-->Hero

JeuPerso..>Jeu
LabyrintheDessin-->MainPerso
JeuPerso-->MainPerso

DessinJeu<.. LabyrintheDessin


@enduml